Wed Aug 27 17:43:38 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - fix bug causing it to stop to soon in CommandRollout

Wed Aug 27 18:19:44 2003 Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c (NewWidget): Fix bug that the shortcut buttons react on
	the player settings.


Wed Aug 27 14:04:44 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c - make szLang writeable, ensure LANG env setting
	  is not a local variable

Wed Aug 27 10:11:28 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* board3d/inc3d.h - remove doubled directory separator

Wed Aug 27 09:00:00 2003  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c Added navigation for match statistics

Tue Aug 26 16:59:33 GMT 2003  Holger Bochnig <hbgg@gmx.net>

	add commands and GUI option to set the language

	* backgammon.h, gnubg.c: add commands
	* gnubg.c (CommandSaveSettings): save language setting
	* gnubg.c (real_main): read language setting from .gnubgautorc,
	  set language
	* gtkoptions.c (OptionsPages, OptionsOK, OptionsSet):
	  GUI language setting
	* set.c, show.c: new functions CommandSetLang, CommandShowLang

TueAug 26 16:17:05  GMT 2003  Jim Segrave jes@jes-2.dmeon.nl

	* gtkexport.c - make number of options a compile time calculation
	
Tue Aug 26 01:43:26 2003  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c (SetAnnotation): rearrange skill widgets to save space

Mon Aug 25 23:39:47 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (GTKNew): add call to gtk_main_quit when dialog
	is destroyed.
	(reported by Joern Thyssen)

Mon Aug 25 23:26:25 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c: ensure that TOGGLE_GAMELIST and friends to not
	overlap with enum _gnubgcommand.

Mon Aug 25 20:53:03 GMT 2003  Jim Segrave jes@jes-2.dmeon.nl

	* gnubg.c = glibc putenv() doesn't copy strings 

Mon Aug 25 22:12:56 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (TheoryUpdated): enlarge font used for
	market window.
	(reported by Massimiliano Maini)
